08-GOTS/parser.output
Terminals unused in grammar

    STRUCT


Rules useless in parser due to conflicts

   75 $@6: ε

   77 $@7: ε


State 28 conflicts: 1 shift/reduce
State 30 conflicts: 1 shift/reduce
State 45 conflicts: 1 shift/reduce
State 52 conflicts: 1 shift/reduce
State 166 conflicts: 1 shift/reduce
State 172 conflicts: 14 shift/reduce
State 185 conflicts: 5 shift/reduce
State 191 conflicts: 2 reduce/reduce
State 200 conflicts: 5 shift/reduce
State 210 conflicts: 5 shift/reduce
State 228 conflicts: 5 shift/reduce
State 229 conflicts: 5 shift/reduce
State 230 conflicts: 5 shift/reduce
State 231 conflicts: 5 shift/reduce
State 232 conflicts: 5 shift/reduce
State 233 conflicts: 5 shift/reduce
State 234 conflicts: 5 shift/reduce
State 237 conflicts: 5 shift/reduce
State 251 conflicts: 5 shift/reduce
State 252 conflicts: 5 shift/reduce
State 260 conflicts: 5 shift/reduce
State 261 conflicts: 5 shift/reduce


Grammar

    0 $accept: programa $end

    1 $@1: ε

    2 programa: PACKAGE IDENTIFICADOR $@1 imports declaraciones_top

    3 $@2: ε

    4 programa: PACKAGE IDENTIFICADOR $@2 declaraciones_top

    5 imports: imports import_stmt
    6        | import_stmt

    7 import_stmt: IMPORT CADENA
    8            | IMPORT '(' import_list ')'

    9 import_list: import_list CADENA
   10            | CADENA

   11 declaraciones_top: declaraciones_top declaracion_top
   12                  | ε

   13 declaracion_top: funcion
   14                | variable_top
   15                | constante_top
   16                | type_decl

   17 type_decl: TYPE IDENTIFICADOR tipo

   18 variable_top: VAR IDENTIFICADOR tipo '=' expresion
   19             | VAR IDENTIFICADOR '=' expresion
   20             | VAR IDENTIFICADOR tipo
   21             | VAR '(' var_block ')'

   22 var_block: var_block var_spec
   23          | var_spec
   24          | ε

   25 var_spec: IDENTIFICADOR tipo '=' expresion
   26         | IDENTIFICADOR '=' expresion
   27         | IDENTIFICADOR tipo

   28 constante_top: CONST IDENTIFICADOR tipo '=' expresion
   29              | CONST IDENTIFICADOR '=' expresion
   30              | CONST '(' const_block ')'

   31 const_block: const_block const_spec
   32            | const_spec
   33            | ε

   34 const_spec: IDENTIFICADOR tipo '=' expresion
   35           | IDENTIFICADOR '=' expresion
   36           | IDENTIFICADOR tipo
   37           | IDENTIFICADOR

   38 $@3: ε

   39 funcion: FUNC IDENTIFICADOR $@3 '(' parametros ')' opt_tipo_retorno bloque

   40 opt_tipo_retorno: tipo_retorno
   41                 | ε

   42 parametros: lista_parametros
   43           | ε

   44 lista_parametros: lista_parametros ',' parametro
   45                 | parametro

   46 parametro: IDENTIFICADOR tipo
   47          | IDENTIFICADOR ',' IDENTIFICADOR tipo

   48 tipo_retorno: tipo
   49             | '(' lista_tipos ')'

   50 lista_tipos: lista_tipos ',' tipo
   51            | tipo

   52 variable: VAR IDENTIFICADOR tipo '=' expresion
   53         | VAR IDENTIFICADOR '=' expresion
   54         | VAR IDENTIFICADOR tipo
   55         | VAR lista_ids tipo
   56         | VAR lista_ids '=' lista_expresiones

   57 lista_ids: lista_ids ',' IDENTIFICADOR
   58          | IDENTIFICADOR ',' IDENTIFICADOR

   59 lista_expresiones: lista_expresiones ',' expresion
   60                  | expresion ',' expresion

   61 constante: CONST IDENTIFICADOR tipo '=' expresion
   62          | CONST IDENTIFICADOR '=' expresion

   63 tipo: TIPO_DATO
   64     | IDENTIFICADOR
   65     | '[' ENTERO ']' tipo
   66     | '[' ']' tipo

   67 $@4: ε

   68 bloque: '{' $@4 sentencias '}'

   69 sentencias: sentencias sentencia
   70           | ε

   71 sentencia: RETURN expresion
   72          | RETURN

   73 $@5: ε

   74 sentencia: IF expresion $@5 bloque

   75 $@6: ε

   76 sentencia: IF expresion $@6 bloque ELSE bloque

   77 $@7: ε

   78 sentencia: IF expresion $@7 bloque ELSE sentencia

   79 $@8: ε

   80 sentencia: FOR expresion $@8 bloque
   81          | FOR bloque
   82          | FOR inicializacion ';' condicion ';' post_iteracion bloque
   83          | SWITCH expresion '{' casos '}'
   84          | expresion
   85          | declaracion_corta
   86          | declaracion_corta_multiple
   87          | asignacion
   88          | asignacion_multiple
   89          | variable
   90          | constante
   91          | BREAK
   92          | CONTINUE
   93          | bloque

   94 declaracion_corta: IDENTIFICADOR DECLARACION_CORTA expresion

   95 declaracion_corta_multiple: lista_ids DECLARACION_CORTA lista_expresiones

   96 asignacion: expresion '=' expresion
   97           | expresion MAS_IGUAL expresion
   98           | expresion MENOS_IGUAL expresion
   99           | expresion POR_IGUAL expresion
  100           | expresion DIV_IGUAL expresion
  101           | expresion MOD_IGUAL expresion

  102 asignacion_multiple: lista_ids '=' lista_expresiones

  103 inicializacion: declaracion_corta
  104               | declaracion_corta_multiple
  105               | asignacion
  106               | asignacion_multiple
  107               | ε

  108 condicion: expresion
  109          | ε

  110 post_iteracion: expresion
  111               | asignacion
  112               | ε

  113 casos: casos caso
  114      | caso

  115 caso: CASE expresion ':' sentencias
  116     | DEFAULT ':' sentencias

  117 expresion: IDENTIFICADOR
  118          | ENTERO
  119          | REAL
  120          | CARACTER
  121          | CADENA
  122          | TRUE
  123          | FALSE
  124          | '(' expresion ')'
  125          | expresion '+' expresion
  126          | expresion '-' expresion
  127          | expresion '*' expresion
  128          | expresion '/' expresion
  129          | expresion '%' expresion
  130          | expresion IGUALDAD expresion
  131          | expresion DIFERENTE expresion
  132          | expresion '<' expresion
  133          | expresion '>' expresion
  134          | expresion MENOR_IGUAL expresion
  135          | expresion MAYOR_IGUAL expresion
  136          | expresion AND expresion
  137          | expresion OR expresion
  138          | '!' expresion
  139          | '-' expresion
  140          | '+' expresion
  141          | expresion INCREMENTO
  142          | expresion DECREMENTO
  143          | INCREMENTO expresion
  144          | DECREMENTO expresion
  145          | expresion '(' argumentos ')'
  146          | expresion '[' expresion ']'
  147          | expresion '.' IDENTIFICADOR
  148          | TIPO_DATO '(' expresion ')'
  149          | IDENTIFICADOR '(' expresion ')'

  150 argumentos: lista_argumentos
  151           | ε

  152 lista_argumentos: lista_argumentos ',' expresion
  153                 | expresion


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 138
    '%' (37) 129
    '(' (40) 8 21 30 39 49 124 145 148 149
    ')' (41) 8 21 30 39 49 124 145 148 149
    '*' (42) 127
    '+' (43) 125 140
    ',' (44) 44 47 50 57 58 59 60 152
    '-' (45) 126 139
    '.' (46) 147
    '/' (47) 128
    ':' (58) 115 116
    ';' (59) 82
    '<' (60) 132
    '=' (61) 18 19 25 26 28 29 34 35 52 53 56 61 62 96 102
    '>' (62) 133
    '[' (91) 65 66 146
    ']' (93) 65 66 146
    '{' (123) 68 83
    '}' (125) 68 83
    error (256)
    IDENTIFICADOR <cadena> (258) 2 4 17 18 19 20 25 26 27 28 29 34 35 36 37 39 46 47 52 53 54 57 58 61 62 64 94 117 147 149
    TIPO_DATO <cadena> (259) 63 148
    CADENA <cadena> (260) 7 9 10 121
    ENTERO <ival> (261) 65 118
    TRUE <ival> (262) 122
    FALSE <ival> (263) 123
    REAL <dval> (264) 119
    CARACTER <cval> (265) 120
    PACKAGE (266) 2 4
    IMPORT (267) 7 8
    FUNC (268) 39
    VAR (269) 18 19 20 21 52 53 54 55 56
    CONST (270) 28 29 30 61 62
    TYPE (271) 17
    STRUCT (272)
    IF (273) 74 76 78
    ELSE (274) 76 78
    FOR (275) 80 81 82
    SWITCH (276) 83
    CASE (277) 115
    DEFAULT (278) 116
    RETURN (279) 71 72
    BREAK (280) 91
    CONTINUE (281) 92
    DECLARACION_CORTA (282) 94 95
    INCREMENTO (283) 141 143
    DECREMENTO (284) 142 144
    MAS_IGUAL (285) 97
    MENOS_IGUAL (286) 98
    POR_IGUAL (287) 99
    DIV_IGUAL (288) 100
    MOD_IGUAL (289) 101
    IGUALDAD (290) 130
    DIFERENTE (291) 131
    MENOR_IGUAL (292) 134
    MAYOR_IGUAL (293) 135
    AND (294) 136
    OR (295) 137
    UNARIO (296)


Nonterminals, with rules where they appear

    $accept (61)
        on left: 0
    programa (62)
        on left: 2 4
        on right: 0
    $@1 (63)
        on left: 1
        on right: 2
    $@2 (64)
        on left: 3
        on right: 4
    imports (65)
        on left: 5 6
        on right: 2 5
    import_stmt (66)
        on left: 7 8
        on right: 5 6
    import_list (67)
        on left: 9 10
        on right: 8 9
    declaraciones_top (68)
        on left: 11 12
        on right: 2 4 11
    declaracion_top (69)
        on left: 13 14 15 16
        on right: 11
    type_decl (70)
        on left: 17
        on right: 16
    variable_top (71)
        on left: 18 19 20 21
        on right: 14
    var_block (72)
        on left: 22 23 24
        on right: 21 22
    var_spec (73)
        on left: 25 26 27
        on right: 22 23
    constante_top (74)
        on left: 28 29 30
        on right: 15
    const_block (75)
        on left: 31 32 33
        on right: 30 31
    const_spec (76)
        on left: 34 35 36 37
        on right: 31 32
    funcion <simbolo> (77)
        on left: 39
        on right: 13
    $@3 (78)
        on left: 38
        on right: 39
    opt_tipo_retorno <cadena> (79)
        on left: 40 41
        on right: 39
    parametros (80)
        on left: 42 43
        on right: 39
    lista_parametros (81)
        on left: 44 45
        on right: 42 44
    parametro (82)
        on left: 46 47
        on right: 44 45
    tipo_retorno <cadena> (83)
        on left: 48 49
        on right: 40
    lista_tipos (84)
        on left: 50 51
        on right: 49 50
    variable (85)
        on left: 52 53 54 55 56
        on right: 89
    lista_ids (86)
        on left: 57 58
        on right: 55 56 57 95 102
    lista_expresiones (87)
        on left: 59 60
        on right: 56 59 95 102
    constante (88)
        on left: 61 62
        on right: 90
    tipo <tipo> (89)
        on left: 63 64 65 66
        on right: 17 18 20 25 27 28 34 36 46 47 48 50 51 52 54 55 61 65 66
    bloque (90)
        on left: 68
        on right: 39 74 76 78 80 81 82 93
    $@4 (91)
        on left: 67
        on right: 68
    sentencias (92)
        on left: 69 70
        on right: 68 69 115 116
    sentencia (93)
        on left: 71 72 74 76 78 80 81 82 83 84 85 86 87 88 89 90 91 92 93
        on right: 69 78
    $@5 (94)
        on left: 73
        on right: 74
    $@6 (95)
        on left: 75
        on right: 76
    $@7 (96)
        on left: 77
        on right: 78
    $@8 (97)
        on left: 79
        on right: 80
    declaracion_corta (98)
        on left: 94
        on right: 85 103
    declaracion_corta_multiple (99)
        on left: 95
        on right: 86 104
    asignacion (100)
        on left: 96 97 98 99 100 101
        on right: 87 105 111
    asignacion_multiple (101)
        on left: 102
        on right: 88 106
    inicializacion (102)
        on left: 103 104 105 106 107
        on right: 82
    condicion (103)
        on left: 108 109
        on right: 82
    post_iteracion (104)
        on left: 110 111 112
        on right: 82
    casos (105)
        on left: 113 114
        on right: 83 113
    caso (106)
        on left: 115 116
        on right: 113 114
    expresion <tipo> (107)
        on left: 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149
        on right: 18 19 25 26 28 29 34 35 52 53 59 60 61 62 71 74 76 78 80 83 84 94 96 97 98 99 100 101 108 110 115 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 152 153
    argumentos (108)
        on left: 150 151
        on right: 145
    lista_argumentos (109)
        on left: 152 153
        on right: 150 152


State 0

    0 $accept: • programa $end

    PACKAGE  shift, and go to state 1

    programa  go to state 2


State 1

    2 programa: PACKAGE • IDENTIFICADOR $@1 imports declaraciones_top
    4         | PACKAGE • IDENTIFICADOR $@2 declaraciones_top

    IDENTIFICADOR  shift, and go to state 3


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 4


State 3

    2 programa: PACKAGE IDENTIFICADOR • $@1 imports declaraciones_top
    4         | PACKAGE IDENTIFICADOR • $@2 declaraciones_top

    IMPORT    reduce using rule 1 ($@1)
    $default  reduce using rule 3 ($@2)

    $@1  go to state 5
    $@2  go to state 6


State 4

    0 $accept: programa $end •

    $default  accept


State 5

    2 programa: PACKAGE IDENTIFICADOR $@1 • imports declaraciones_top

    IMPORT  shift, and go to state 7

    imports      go to state 8
    import_stmt  go to state 9


State 6

    4 programa: PACKAGE IDENTIFICADOR $@2 • declaraciones_top

    $default  reduce using rule 12 (declaraciones_top)

    declaraciones_top  go to state 10


State 7

    7 import_stmt: IMPORT • CADENA
    8            | IMPORT • '(' import_list ')'

    CADENA  shift, and go to state 11
    '('     shift, and go to state 12


State 8

    2 programa: PACKAGE IDENTIFICADOR $@1 imports • declaraciones_top
    5 imports: imports • import_stmt

    IMPORT  shift, and go to state 7

    $default  reduce using rule 12 (declaraciones_top)

    import_stmt        go to state 13
    declaraciones_top  go to state 14


State 9

    6 imports: import_stmt •

    $default  reduce using rule 6 (imports)


State 10

    4 programa: PACKAGE IDENTIFICADOR $@2 declaraciones_top •
   11 declaraciones_top: declaraciones_top • declaracion_top

    FUNC   shift, and go to state 15
    VAR    shift, and go to state 16
    CONST  shift, and go to state 17
    TYPE   shift, and go to state 18

    $default  reduce using rule 4 (programa)

    declaracion_top  go to state 19
    type_decl        go to state 20
    variable_top     go to state 21
    constante_top    go to state 22
    funcion          go to state 23


State 11

    7 import_stmt: IMPORT CADENA •

    $default  reduce using rule 7 (import_stmt)


State 12

    8 import_stmt: IMPORT '(' • import_list ')'

    CADENA  shift, and go to state 24

    import_list  go to state 25


State 13

    5 imports: imports import_stmt •

    $default  reduce using rule 5 (imports)


State 14

    2 programa: PACKAGE IDENTIFICADOR $@1 imports declaraciones_top •
   11 declaraciones_top: declaraciones_top • declaracion_top

    FUNC   shift, and go to state 15
    VAR    shift, and go to state 16
    CONST  shift, and go to state 17
    TYPE   shift, and go to state 18

    $default  reduce using rule 2 (programa)

    declaracion_top  go to state 19
    type_decl        go to state 20
    variable_top     go to state 21
    constante_top    go to state 22
    funcion          go to state 23


State 15

   39 funcion: FUNC • IDENTIFICADOR $@3 '(' parametros ')' opt_tipo_retorno bloque

    IDENTIFICADOR  shift, and go to state 26


State 16

   18 variable_top: VAR • IDENTIFICADOR tipo '=' expresion
   19             | VAR • IDENTIFICADOR '=' expresion
   20             | VAR • IDENTIFICADOR tipo
   21             | VAR • '(' var_block ')'

    IDENTIFICADOR  shift, and go to state 27
    '('            shift, and go to state 28


State 17

   28 constante_top: CONST • IDENTIFICADOR tipo '=' expresion
   29              | CONST • IDENTIFICADOR '=' expresion
   30              | CONST • '(' const_block ')'

    IDENTIFICADOR  shift, and go to state 29
    '('            shift, and go to state 30


State 18

   17 type_decl: TYPE • IDENTIFICADOR tipo

    IDENTIFICADOR  shift, and go to state 31


State 19

   11 declaraciones_top: declaraciones_top declaracion_top •

    $default  reduce using rule 11 (declaraciones_top)


State 20

   16 declaracion_top: type_decl •

    $default  reduce using rule 16 (declaracion_top)


State 21

   14 declaracion_top: variable_top •

    $default  reduce using rule 14 (declaracion_top)


State 22

   15 declaracion_top: constante_top •

    $default  reduce using rule 15 (declaracion_top)


State 23

   13 declaracion_top: funcion •

    $default  reduce using rule 13 (declaracion_top)


State 24

   10 import_list: CADENA •

    $default  reduce using rule 10 (import_list)


State 25

    8 import_stmt: IMPORT '(' import_list • ')'
    9 import_list: import_list • CADENA

    CADENA  shift, and go to state 32
    ')'     shift, and go to state 33


State 26

   39 funcion: FUNC IDENTIFICADOR • $@3 '(' parametros ')' opt_tipo_retorno bloque

    $default  reduce using rule 38 ($@3)

    $@3  go to state 34


State 27

   18 variable_top: VAR IDENTIFICADOR • tipo '=' expresion
   19             | VAR IDENTIFICADOR • '=' expresion
   20             | VAR IDENTIFICADOR • tipo

    IDENTIFICADOR  shift, and go to state 35
    TIPO_DATO      shift, and go to state 36
    '['            shift, and go to state 37
    '='            shift, and go to state 38

    tipo  go to state 39


State 28

   21 variable_top: VAR '(' • var_block ')'

    IDENTIFICADOR  shift, and go to state 40

    IDENTIFICADOR  [reduce using rule 24 (var_block)]
    $default       reduce using rule 24 (var_block)

    var_block  go to state 41
    var_spec   go to state 42


State 29

   28 constante_top: CONST IDENTIFICADOR • tipo '=' expresion
   29              | CONST IDENTIFICADOR • '=' expresion

    IDENTIFICADOR  shift, and go to state 35
    TIPO_DATO      shift, and go to state 36
    '['            shift, and go to state 37
    '='            shift, and go to state 43

    tipo  go to state 44


State 30

   30 constante_top: CONST '(' • const_block ')'

    IDENTIFICADOR  shift, and go to state 45

    IDENTIFICADOR  [reduce using rule 33 (const_block)]
    $default       reduce using rule 33 (const_block)

    const_block  go to state 46
    const_spec   go to state 47


State 31

   17 type_decl: TYPE IDENTIFICADOR • tipo

    IDENTIFICADOR  shift, and go to state 35
    TIPO_DATO      shift, and go to state 36
    '['            shift, and go to state 37

    tipo  go to state 48


State 32

    9 import_list: import_list CADENA •

    $default  reduce using rule 9 (import_list)


State 33

    8 import_stmt: IMPORT '(' import_list ')' •

    $default  reduce using rule 8 (import_stmt)


State 34

   39 funcion: FUNC IDENTIFICADOR $@3 • '(' parametros ')' opt_tipo_retorno bloque

    '('  shift, and go to state 49


State 35

   64 tipo: IDENTIFICADOR •

    $default  reduce using rule 64 (tipo)


State 36

   63 tipo: TIPO_DATO •

    $default  reduce using rule 63 (tipo)


State 37

   65 tipo: '[' • ENTERO ']' tipo
   66     | '[' • ']' tipo

    ENTERO  shift, and go to state 50
    ']'     shift, and go to state 51


State 38

   19 variable_top: VAR IDENTIFICADOR '=' • expresion

    IDENTIFICADOR  shift, and go to state 52
    TIPO_DATO      shift, and go to state 53
    CADENA         shift, and go to state 54
    ENTERO         shift, and go to state 55
    TRUE           shift, and go to state 56
    FALSE          shift, and go to state 57
    REAL           shift, and go to state 58
    CARACTER       shift, and go to state 59
    INCREMENTO     shift, and go to state 60
    DECREMENTO     shift, and go to state 61
    '+'            shift, and go to state 62
    '-'            shift, and go to state 63
    '!'            shift, and go to state 64
    '('            shift, and go to state 65

    expresion  go to state 66


State 39

   18 variable_top: VAR IDENTIFICADOR tipo • '=' expresion
   20             | VAR IDENTIFICADOR tipo •

    '='  shift, and go to state 67

    $default  reduce using rule 20 (variable_top)


State 40

   25 var_spec: IDENTIFICADOR • tipo '=' expresion
   26         | IDENTIFICADOR • '=' expresion
   27         | IDENTIFICADOR • tipo

    IDENTIFICADOR  shift, and go to state 35
    TIPO_DATO      shift, and go to state 36
    '['            shift, and go to state 37
    '='            shift, and go to state 68

    tipo  go to state 69


State 41

   21 variable_top: VAR '(' var_block • ')'
   22 var_block: var_block • var_spec

    IDENTIFICADOR  shift, and go to state 40
    ')'            shift, and go to state 70

    var_spec  go to state 71


State 42

   23 var_block: var_spec •

    $default  reduce using rule 23 (var_block)


State 43

   29 constante_top: CONST IDENTIFICADOR '=' • expresion

    IDENTIFICADOR  shift, and go to state 52
    TIPO_DATO      shift, and go to state 53
    CADENA         shift, and go to state 54
    ENTERO         shift, and go to state 55
    TRUE           shift, and go to state 56
    FALSE          shift, and go to state 57
    REAL           shift, and go to state 58
    CARACTER       shift, and go to state 59
    INCREMENTO     shift, and go to state 60
    DECREMENTO     shift, and go to state 61
    '+'            shift, and go to state 62
    '-'            shift, and go to state 63
    '!'            shift, and go to state 64
    '('            shift, and go to state 65

    expresion  go to state 72


State 44

   28 constante_top: CONST IDENTIFICADOR tipo • '=' expresion

    '='  shift, and go to state 73


State 45

   34 const_spec: IDENTIFICADOR • tipo '=' expresion
   35           | IDENTIFICADOR • '=' expresion
   36           | IDENTIFICADOR • tipo
   37           | IDENTIFICADOR •

    IDENTIFICADOR  shift, and go to state 35
    TIPO_DATO      shift, and go to state 36
    '['            shift, and go to state 37
    '='            shift, and go to state 74

    IDENTIFICADOR  [reduce using rule 37 (const_spec)]
    $default       reduce using rule 37 (const_spec)

    tipo  go to state 75


State 46

   30 constante_top: CONST '(' const_block • ')'
   31 const_block: const_block • const_spec

    IDENTIFICADOR  shift, and go to state 45
    ')'            shift, and go to state 76

    const_spec  go to state 77


State 47

   32 const_block: const_spec •

    $default  reduce using rule 32 (const_block)


State 48

   17 type_decl: TYPE IDENTIFICADOR tipo •

    $default  reduce using rule 17 (type_decl)


State 49

   39 funcion: FUNC IDENTIFICADOR $@3 '(' • parametros ')' opt_tipo_retorno bloque

    IDENTIFICADOR  shift, and go to state 78

    $default  reduce using rule 43 (parametros)

    parametros        go to state 79
    lista_parametros  go to state 80
    parametro         go to state 81


State 50

   65 tipo: '[' ENTERO • ']' tipo

    ']'  shift, and go to state 82


State 51

   66 tipo: '[' ']' • tipo

    IDENTIFICADOR  shift, and go to state 35
    TIPO_DATO      shift, and go to state 36
    '['            shift, and go to state 37

    tipo  go to state 83


State 52

  117 expresion: IDENTIFICADOR •
  149          | IDENTIFICADOR • '(' expresion ')'

    '('  shift, and go to state 84

    '('       [reduce using rule 117 (expresion)]
    $default  reduce using rule 117 (expresion)


State 53

  148 expresion: TIPO_DATO • '(' expresion ')'

    '('  shift, and go to state 85


State 54

  121 expresion: CADENA •

    $default  reduce using rule 121 (expresion)


State 55

  118 expresion: ENTERO •

    $default  reduce using rule 118 (expresion)


State 56

  122 expresion: TRUE •

    $default  reduce using rule 122 (expresion)


State 57

  123 expresion: FALSE •

    $default  reduce using rule 123 (expresion)


State 58

  119 expresion: REAL •

    $default  reduce using rule 119 (expresion)


State 59

  120 expresion: CARACTER •

    $default  reduce using rule 120 (expresion)


State 60

  143 expresion: INCREMENTO • expresion

    IDENTIFICADOR  shift, and go to state 52
    TIPO_DATO      shift, and go to state 53
    CADENA         shift, and go to state 54
    ENTERO         shift, and go to state 55
    TRUE           shift, and go to state 56
    FALSE          shift, and go to state 57
    REAL           shift, and go to state 58
    CARACTER       shift, and go to state 59
    INCREMENTO     shift, and go to state 60
    DECREMENTO     shift, and go to state 61
    '+'            shift, and go to state 62
    '-'            shift, and go to state 63
    '!'            shift, and go to state 64
    '('            shift, and go to state 65

    expresion  go to state 86


State 61

  144 expresion: DECREMENTO • expresion

    IDENTIFICADOR  shift, and go to state 52
    TIPO_DATO      shift, and go to state 53
    CADENA         shift, and go to state 54
    ENTERO         shift, and go to state 55
    TRUE           shift, and go to state 56
    FALSE          shift, and go to state 57
    REAL           shift, and go to state 58
    CARACTER       shift, and go to state 59
    INCREMENTO     shift, and go to state 60
    DECREMENTO     shift, and go to state 61
    '+'            shift, and go to state 62
    '-'            shift, and go to state 63
    '!'            shift, and go to state 64
    '('            shift, and go to state 65

    expresion  go to state 87


State 62

  140 expresion: '+' • expresion
